package Interfaces;

public interface Comeable {
}
