package Interfaces;

public interface Flyable {
    void prepareToFly();

    void flyAway();
}
