package Interfaces;

public interface Itemable {
}
