package Interfaces;

import Enums.MoveType;

public interface Moveable {
    void move(MoveType parameters, Comeable direction);
}
